bonus/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  namespace: gitlab
spec:
  ports:
  - name: http
    port: 8888
    targetPort: 8888
  selector:
    app: wil-playground
